--- a/package.json
+++ b/package.json
@@ -6,15 +6,32 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "license": "MIT",
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
+    "@types/node": "^18.0.1",
+    "autoprefixer": "^10.4.7",
+    "pokenode-ts": "^1.14.0",
+    "postcss": "^8.4.14",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.4",
+    "ts-node": "^10.8.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
-    "solid-js": "^1.4.2"
+    "@prisma/client": "^4.0.0",
+    "@trpc/client": "^9.25.3",
+    "@trpc/server": "^9.25.3",
+    "@vercel/node": "^2.3.3",
+    "prisma": "^4.0.0",
+    "solid-js": "^1.4.2",
+    "zod": "^3.17.3"
   }
 }
