--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "clsx": "^1.2.0",
     "prisma": "^4.0.0",
     "solid-js": "^1.4.2",
     "zod": "^3.17.3"
