--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "start": "vite --port 3000",
+    "dev": "vite --port 3000",
     "build": "vite build",
-    "serve": "vite preview",
+    "serve": "vite preview --port 3000",
     "typecheck": "tsc --noEmit",
     "postinstall": "prisma generate"
   },
