--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
   },
   "license": "MIT",
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^4.7.1",
-    "@solidjs/router": "^0.5.1",
-    "@tanstack/solid-query": "^4.20.4",
-    "@trpc/client": "^10.5.0",
-    "@trpc/next": "^10.5.0",
-    "@trpc/server": "^10.5.0",
+    "@prisma/client": "^4.14.0",
+    "@solidjs/router": "^0.8.2",
+    "@tanstack/solid-query": "^4.29.5",
+    "@trpc/client": "^10.26.0",
+    "@trpc/next": "^10.26.0",
+    "@trpc/server": "^10.26.0",
     "clsx": "^1.2.1",
-    "solid-js": "^1.6.5",
+    "solid-js": "^1.7.5",
     "solid-trpc": "0.0.11-rc.2",
-    "zod": "^3.20.2"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.15",
-    "@vercel/node": "^2.8.1",
-    "autoprefixer": "^10.4.13",
-    "pokenode-ts": "^1.17.0",
-    "postcss": "^8.4.20",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.7.1",
-    "tailwindcss": "^3.2.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.1",
-    "vite-plugin-solid": "^2.5.0"
+    "@vercel/node": "^2.14.2",
+    "autoprefixer": "^10.4.14",
+    "pokenode-ts": "^1.18.3",
+    "postcss": "^8.4.23",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2",
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5",
+    "vite-plugin-solid": "^2.7.0"
   }
 }
